# segemation_room

./: .gitignore  CMakeLists.txt  main.cc  map1000-1.txt  map1000.txt
cmake/: gcc-flags.cmake  rk_aarch64-linux-gnu.cmake
ipa_room_segmentation/: abstract_voronoi_segmentation.cpp  abstract_voronoi_segmentation.h  contains.h  room_class.cpp  room_class.h  timer.h  voronoi_segmentation.cpp  voronoi_segmentation.h  wavefront_region_growing.cpp  wavefront_region_growing.h
thridparty/opencv/lib/: libopencv_core.so.3.3.0  libopencv_dnn.so.3.3.0  libopencv_flann.so.3.3.0  libopencv_highgui.so.3.3.0  libopencv_imgcodecs.so.3.3.0  libopencv_imgproc.so.3.3.0  libopencv_videoio.so.3.3.0  libz.so.1.2.11
维诺图房间分割算法/: 维诺图房间分割实时性分析.md  维诺图房间分割算法.md
